Added users list, logout page, and header bar

--- a/views/game.jade
+++ b/views/game.jade
@@ -12,6 +12,7 @@ html(lang="en" ng-app="bewd.tictactoe.board")
       h1 Hi #{username}
       h2 Want to play a game?
 
+      //The :: means angular only evaluates it once
       p The answer is {{:: theAnswer }}
       p Or is it {{ theAnswer }}
 
