--- a/views/individualGame.jade
+++ b/views/individualGame.jade
@@ -1,3 +1,10 @@
+extends ./layout.jade
+
+block title
+  title Game ##{board.id}!
+
+block content
+
 doctype html
 html(lang="en" ng-app="bewd.tictactoe.board")
   head
