--- a/views/users.jade
+++ b/views/users.jade
@@ -1,16 +1,17 @@
 extends ./layout.jade
 
 block title
-  title All the Games!
+  title User List
 
 block content
   div.container
-    h1 All the Games!
+    h1 All the Players!
     ul
-      if(boards)
-        each board in boards
+      if(users)
+        each user in users
           li
-            a(href="/games/#{board.id}") Game ##{board.id}
+            a(href="#") #{user.username}
+  //-
     h2 Create a New Game!
     form(name="newGame", action="/games", method="post")
       div.form-group
