Added updates from Mon 10/4 class

--- a/views/logout.jade
+++ b/views/logout.jade
@@ -6,7 +6,7 @@ block title
 block content
   if(errors)
     h1.text-danger There seems to have been an error in logging out.  Please try again.
-    code= errors.message;
+    code= errors.message
   else
     h1 You have been successfully logged out.
     p Thanks for playing!
