--- a/views/games.jade
+++ b/views/games.jade
@@ -6,11 +6,24 @@ block title
 block content
   div.container
     h1 All the Games!
+    p Existing boards
     ul
       if(boards)
         each board in boards
           li
             a(href="/games/#{board.id}") Game ##{board.id}
+    //- #{} is jade interpreter of variables
+    //- {{ }} is angular interpreting the data
+    p All the boards
+    div(ng-controller="BoardsController as boards")
+      ul
+        li(ng-repeat="board in boards.boards track by board.id")
+          a(ng-click="boards.selectBoard(board)") Game {{ '#' + board.id }}
+
+      div(ng-show="boards.selectedBoard")
+        p Game {{ '#' + boards.selectedBoard.id }}
+        tic-tac-toe-board(the-board="boards.selectedBoard.board")
+
     h2 Create a New Game!
     form(name="newGame", action="/games", method="post")
       div.form-group
