updates that i dont fully remember right now

--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -14,6 +14,8 @@ nav.navbar.navbar-default.navbar-inverse
       ul.nav.navbar-nav.navbar-right
         li
           a(href="/games") Games
+        li
+          a(href="/users/") Users
         if(currentUser)
           li 
             a(href="#") #{currentUser.username}
