--- a/views/users.jade
+++ b/views/users.jade
@@ -13,7 +13,7 @@ block content
       if(users)
         each user in users
           li
-            a(href="#") #{user.username}
+            a(href="/users/#{user.username}") #{user.username}
       //-
         ul(ng-controller="BoardsController as userList")
           li(ng-repeat="username in userList.username track by userList.id")
