Finally catching everything in my version with the class version

--- a/views/includes/header.jade
+++ b/views/includes/header.jade
@@ -18,7 +18,7 @@ nav.navbar.navbar-default.navbar-inverse
           a(href="/users/") Users
         if(currentUser)
           li 
-            a(href="#") #{currentUser.username}
+            a(href="/users/#{currentUser.username}") #{currentUser.username}
           li
             a(href="/logout") Logout
         else
