--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,13 +1,19 @@
+//- ./views/layout.jade
 doctype html
 html(ng-app="bewd.tictactoe")
   head
-    block title
-
     include ./includes/bower_bootstrap.jade
     include ./includes/header.jade
+    block title
+      title Tic Tac Toe Time!
 
   body
     include ./includes/flash.jade
+    include ./mixins/forLoggedInUser.jade
+    +forLoggedInUser
+      div.container-fluid
+        div.alert.alert-info
+          p You are currently logged in as #{currentUser.username}
     div.container-fluid
       div.well
         block content
