--- a/views/game.jade
+++ b/views/game.jade
@@ -4,8 +4,8 @@ html(lang="en" ng-app="bewd.tictactoe.board")
     include ./includes/bower_bootstrap.jade
     title Welcome #{username}
   body
-    tic-Tac-Toe-Board(the-board="[['', '', ''], ['', '', ''], ['', '', '']]")
-    tic-Tac-Toe-Board(the-board="[['', '', ''], ['', '', ''], ['', '', '']]")
+    tic-tac-toe-board(the-board="[['', '', ''], ['', '', ''], ['', '', '']]")
+    tic-tac-toe-board(the-board="[['', '', ''], ['', '', ''], ['', '', '']]")
 
     //- This is from bootstrap, for center-ish-ing
     div.container(ng-init="theList = ['David', 'John', 'Lee']; theAnswer = 47-5")
@@ -21,13 +21,13 @@ html(lang="en" ng-app="bewd.tictactoe.board")
       form(ng-submit="theList.push(newName); newName = ''")
         div.form-group
           label New name
-          input(type="text" ng-model="newName" class="form-control")
+          input.form-control(type="text" ng-model="newName")
         button.btn.btn-default(type="submit") Add name
 
       div.form-group
         label Filter
         input.form-control(type="text" ng-model="nameFilter")
-
+      
       ul
         li(ng-repeat="name in theList | filter:nameFilter track by $index ") {{ name }}
         //'track by $index allows for multiple entries of same "name"'
