--- a/views/games.jade
+++ b/views/games.jade
@@ -1,11 +1,19 @@
 extends ./layout.jade
 
 block title
-  title All the Games!
+  title
+    if !title
+      | All the games!
+    else
+      = title
 
 block content
   div.container
-    h1 All the Games!
+    h1
+      if !title
+        | All the games!
+      else
+        = title
     p Existing boards
     ul
       if(boards)
