--- a/views/includes/bower_bootstrap.jade
+++ b/views/includes/bower_bootstrap.jade
@@ -1,10 +1,10 @@
 script(src='/bower_components/jquery/dist/jquery.js')
-link(href='/bower_components/bootstrap/dist/css/bootstrap.css' 
-	 rel='stylesheet')
+link(href='/bower_components/bootstrap/dist/css/bootstrap.css'
+     rel='stylesheet')
 script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
 script(src='/bower_components/angular/angular.js')
 script(src='/bower_components/angular-messages/angular-messages.js')
 script(src='/public/js/tictactoe/app.js')
 script(src='/public/js/tictactoe/board.js')
 script(src='/public/js/tictactoe/registration.js')
-//script(src='/public/js/tictactoe_module.js')
+script(src='/bower_components/angular-route/angular-route.js')
