--- a/views/index.jade
+++ b/views/index.jade
@@ -4,11 +4,18 @@ block title
   title Tic Tac Toe!
 
 block content
-  div.content-fluid
-    h1 TIC beTACmore TOE!
-    h5 New user?  Register 
-      a(href="/register") here
-      | !
-    h5 Already have an account?  Log in 
-      a(href="/login") here
-      | !
+  ng-view
+  //
+    div.content-fluid
+      h1 
+        | Hello 
+        if currentUser
+          = currentUser.username
+        else
+          | fellow citizens!
+      h5 New user?  Register 
+        a(href="/register") here
+        | !
+      h5 Already have an account?  Log in 
+        a(href="/login") here
+        | !
