--- a/views/individualGame.jade
+++ b/views/individualGame.jade
@@ -1,18 +1,23 @@
 extends ./layout.jade
 
 block title
-  title Game ##{board.id}!
+  title Game ##{board.id}
 
 block content
-    div.container
-        h1 Game ##{board.id}
-        tic-tac-toe-board(the-board="#{JSON.stringify(board.board)}")
+  div.container
+    h1 Game ##{board.id}
+    tic-tac-toe-board(the-board="#{JSON.stringify(board.board)}")
 
-        form(action="/games/#{board.id}", method="post")
-          div.form-group
-            label.control-label New Game State
-            input.form-control(type="text", name="board", value="#{board.board.map(function(b) { return b.join(''); }).join('')}")
-            button.btn.btn-success(type="submit") Update board
+    if currentUser && board.isOpenForJoining()
+      //- render buttons or something
+    else
+      p Game is full
+
+      form(action='/games/#{board.id}', method="post")
+        div.form-group
+          label.control-label New Game State
+          input.form-control(type="text", name="board", value="#{board.board.map(function(b) { return b.join(''); }).join('')}")
+          button.btn.btn-success(type="submit") Update board
 
 
-        form(name="saveGame", action="/games/:board.id", method="post")
+      form(name="saveGame", action="/games/:board.id", method="post")
