--- a/views/games.jade
+++ b/views/games.jade
@@ -22,15 +22,8 @@ block content
             a(href="/games/#{board.id}") Game ##{board.id}
     //- #{} is jade interpreter of variables
     //- {{ }} is angular interpreting the data
-    p All the boards
-    div(ng-controller="BoardsController as boards")
-      ul
-        li(ng-repeat="board in boards.boards track by board.id")
-          a(ng-click="boards.selectBoard(board)") Game {{ '#' + board.id }}
-
-      div(ng-show="boards.selectedBoard")
-        p Game {{ '#' + boards.selectedBoard.id }}
-        tic-tac-toe-board(the-board="boards.selectedBoard.board")
+    
+    include ./partials/games.jade
 
     h2 Create a New Game!
     form(name="newGame", action="/games", method="post")
