Bunch of updates from previous class I forgot to commit previously and dont remember specifically what the changers were...woops

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,7 @@ html(ng-app="bewd.tictactoe")
   head
     include ./includes/bower_bootstrap.jade
     include ./includes/header.jade
+    base(href="/")
     block title
       title Tic Tac Toe Time!
 
